--- a/src/main/java/com/edusoftwerks/gwt/views/client/theme/CheckBox.css
+++ b/src/main/java/com/edusoftwerks/gwt/views/client/theme/CheckBox.css
@@ -41,7 +41,7 @@
 }
 
 .v-Checkbox.is-focused > .indicator {
-    box-shadow: inset 0 0 0 1px rgba(32, 86, 156, 0.6), inset 0 -1px 0 rgba(29, 105, 175, 0.3);
+    box-shadow: inset 0 0 0 1px rgba(32, 86, 156, 0.6), inset 0 -1px 0 rgba(29, 105, 175, 0.3) !important;
 }
 
 .v-Checkbox.is-hover:not(.is-disabled) > .indicator {
