--- a/src/main/java/com/edusoftwerks/gwt/views/client/theme/Dialog.css
+++ b/src/main/java/com/edusoftwerks/gwt/views/client/theme/Dialog.css
@@ -86,6 +86,10 @@
     user-select: none;
 }
 
+.v-Dialog-titlebar.v-draggable .v-Dialog-title {
+    cursor: move;
+}
+
 .v-Dialog-tools {
     float: right;
     margin-right: 0;
