--- a/src/main/java/com/edusoftwerks/gwt/views/client/theme/Text.css
+++ b/src/main/java/com/edusoftwerks/gwt/views/client/theme/Text.css
@@ -123,7 +123,7 @@
     font-size: 17px;
     width: 24px;
     background: transparent;
-    color: #6f6f6f;
+    color: #555;
     text-shadow: none;
     text-align: center;
     display: table;
@@ -151,7 +151,7 @@
     padding: 0;
     height: auto;
     background: transparent;
-    color: #6f6f6f;
+    color: #555;
     transition: none;
     line-height: 10px;
     overflow: visible;
