--- a/src/main/java/com/edusoftwerks/gwt/views/client/theme/ComboBox.css
+++ b/src/main/java/com/edusoftwerks/gwt/views/client/theme/ComboBox.css
@@ -1,14 +1,12 @@
 @external *;
 
 .v-ComboBox {
-
     position: relative;
     display: grid;
     grid-template-areas: "select";
     align-items: center;
     border: 1px solid #bbb;
     border-radius: 0.3em;
-    padding: 0.5em;
     font-size: 1rem;
     cursor: pointer;
     line-height: 1.1;
@@ -26,12 +24,17 @@
     -webkit-appearance: none;
     background-color: transparent;
     border: none;
-    padding: 0;
+    padding: 0.5em;
     margin: 0;
     width: 100%;
+    height: 30px;
     cursor: inherit;
     line-height: inherit;
     outline: none;
+}
+
+.v-ComboBox.is-hover {
+    background-image: linear-gradient(to top, #f0f0f0, #f5f5f5 33%);
 }
 
 .v-ComboBox > select.v-Combo-input::-ms-expand {
