--- a/src/main/java/com/edusoftwerks/gwt/views/client/theme/ComboBox.css
+++ b/src/main/java/com/edusoftwerks/gwt/views/client/theme/ComboBox.css
@@ -24,7 +24,7 @@
     -webkit-appearance: none;
     background-color: transparent;
     border: none;
-    padding: 0.5em;
+    padding: 5px 8px 4px 8px;
     margin: 0;
     width: 100%;
     height: 30px;
