--- a/src/main/java/com/edusoftwerks/gwt/views/client/theme/Toast.css
+++ b/src/main/java/com/edusoftwerks/gwt/views/client/theme/Toast.css
@@ -99,7 +99,7 @@
     width: 22px;
     display: none;
     font-size: 19px;
-    margin: 7px 3px 0 6px;
+    margin: 9px 0 0 6px;
     box-sizing: border-box;
 }
 
@@ -116,11 +116,11 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    word-wrap: break-word;
+    word-wrap: normal;
 }
 
 .v-Toast-content > .message {
-    margin: 8px 10px 8px 8px;
+    margin: 4px 12px 4px 4px;
     width: auto;
     flex-grow: 1;
 }
