--- a/src/main/java/com/edusoftwerks/gwt/views/client/theme/Menu.css
+++ b/src/main/java/com/edusoftwerks/gwt/views/client/theme/Menu.css
@@ -93,7 +93,7 @@ ul.v-Menu {
     padding-right: 18px;
 }
 
-.v-MenuButton i.chevron {
+.v-MenuButton i.font-icon {
     text-align: center;
     font-size: 16px;
     width: 32px;
